# ppdrop

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
static/: app.js  index.html  lang.js  style.css
