[package]
name = "ppdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
qrcode = "0.14"
if-addrs = "0.12"

[profile.release]
opt-level = "z"     # optimize for size
lto = true          # link-time optimization
codegen-units = 1   # prevent parallel codegen (larger)
strip = true        # strip symbols
